--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ url: https://just-the-docs.github.io
 
 aux_links:
   代码仓库: https://github.com/Wiederholung/introduction-to-embodied-intelligence
+  BML CodeLab: https://aistudio.baidu.com/projectdetail/7680815?sUid=2347675&shared=1&ts=1712410676912
 
 # Set a path/url to a favicon that will be displayed by the browser
 favicon_ico: /assets/images/favicon.ico
