--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,11 @@ url: https://just-the-docs.github.io
 
 aux_links:
   代码仓库: https://github.com/Wiederholung/introduction-to-embodied-intelligence
-  BML CodeLab: https://aistudio.baidu.com/projectdetail/7680815?sUid=2347675&shared=1&ts=1712410676912
+  Google Colab: https://colab.research.google.com/
+  百度 BML CodeLab: https://aistudio.baidu.com/projectdetail/7680815?sUid=2347675&shared=1&ts=1712410676912
+  视频合集: https://amoycjr.github.io/Frontiers-of-Embodied-Intelligence-Video-Website/
+
+aux_links_new_tab: true
 
 # Set a path/url to a favicon that will be displayed by the browser
 favicon_ico: /assets/images/favicon.ico
-
-search_enabled: true
