--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,18 @@ url: https://just-the-docs.github.io
 
 aux_links:
   代码仓库: https://github.com/Wiederholung/introduction-to-embodied-intelligence
-  百度 BML CodeLab: https://aistudio.baidu.com/projectdetail/7680815?sUid=2347675&shared=1&ts=1712410676912
-  视频合集: https://amoycjr.github.io/Frontiers-of-Embodied-Intelligence-Video-Website/
+  # 百度 BML CodeLab: https://aistudio.baidu.com/projectdetail/7680815?sUid=2347675&shared=1&ts=1712410676912
+  # 视频合集: https://amoycjr.github.io/Frontiers-of-Embodied-Intelligence-Video-Website/
 
 aux_links_new_tab: true
 
 # Set a path/url to a favicon that will be displayed by the browser
 favicon_ico: /assets/images/favicon.ico
+
+# Back to top link
+back_to_top: true
+back_to_top_text: "返回顶部"
+
+# Footer last edited timestamp
+last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
+last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
